correção de links

--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
       <div class="container">
         <div class="responsive-grid-50-50">
           <h2 class="restaura-jeans-title">
-            <a href="work.html">
+            <a
+              href="https://www.behance.net/gallery/106330577/Restaura-Jeans-Web-App"
+              target="_blank"
+            >
               Restaura <br />
               Jeans
               <img
