--- a/works/dental-speed.html
+++ b/works/dental-speed.html
@@ -95,7 +95,7 @@
               </h3>
               <a
                 class="default-link"
-                href="https://www.behance.net/Gbtonini"
+                href="https://www.behance.net/gallery/137044111/Dental-Speed-Henry-Schein"
                 target="_blank"
               >
                 Behance
