--- a/works/di-ginie.html
+++ b/works/di-ginie.html
@@ -95,7 +95,7 @@
               </h3>
               <a
                 class="default-link"
-                href="https://www.behance.net/Gbtonini"
+                href="https://www.behance.net/gallery/156464633/Career-Digital-Platform-DiGinie"
                 target="_blank"
               >
                 Behance
