otimização das imagens

--- a/contact-me.html
+++ b/contact-me.html
@@ -104,7 +104,10 @@
                     type="text"
                     placeholder="Your Email"
                   />
-                  <img src="assets/icons/mail-icon.png" />
+<svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+<rect opacity="0.01" y="0.0310059" width="20" height="20" fill="#1530EC"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M15.8327 3.36426H4.16602C2.7853 3.36426 1.66602 4.48355 1.66602 5.86426V14.1976C1.66602 15.5783 2.7853 16.6976 4.16602 16.6976H15.8327C17.2134 16.6976 18.3327 15.5783 18.3327 14.1976V5.86426C18.3327 4.48355 17.2134 3.36426 15.8327 3.36426ZM15.8327 5.03092L10.416 8.75592C10.1582 8.90479 9.84052 8.90479 9.58268 8.75592L4.16602 5.03092H15.8327Z" fill="#1530EC"/>
+</svg>
                 </div>
                 <span class="error-message"></span>
               </div>
@@ -113,7 +116,11 @@
                 <label for="input-name">Full Name</label>
                 <div class="input-container">
                   <input id="input-name" type="text" placeholder="Your Name" />
-                  <img src="assets/icons/user-icon.png" />
+<svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+<rect opacity="0.01" y="0.100586" width="20" height="20" fill="#1530EC"/>
+<path d="M9.99935 9.26725C11.8403 9.26725 13.3327 7.77487 13.3327 5.93392C13.3327 4.09297 11.8403 2.60059 9.99935 2.60059C8.1584 2.60059 6.66602 4.09297 6.66602 5.93392C6.66602 7.77487 8.1584 9.26725 9.99935 9.26725Z" fill="#1530EC"/>
+<path d="M14.9993 17.6005C15.4596 17.6005 15.8327 17.2274 15.8327 16.7672C15.8327 13.5455 13.221 10.9338 9.99935 10.9338C6.77769 10.9338 4.16602 13.5455 4.16602 16.7672C4.16602 17.2274 4.53911 17.6005 4.99935 17.6005H14.9993Z" fill="#1530EC"/>
+</svg>
                 </div>
                 <span class="error-message"></span>
               </div>
