correção de texto sobre mim

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Gab Tonini | ABOUT ME</title>
   <meta charset="UTF-8" />
@@ -10,258 +10,225 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet"
-  />
+    rel="stylesheet" />
   <link rel="stylesheet" href="./styles/index.css" />
-  <script
-    type="text/javascript"
-    src="./scripts/scripts.js"
-  ></script>
+  <script type="text/javascript" src="./scripts/scripts.js"></script>
 </head>
 
-  <body>
-    <header class="background-banner">
-      <div class="container">
-        <div class="header-container">
-          <div class="logo"><a href="./index.html">Gab Tonini</a></div>
-          <nav>
-            <ul>
-              <li>
-                <a href="./work.html">Work</a>
-              </li>
-              <li>
-                <a href="./about.html" class="active-page">About</a>
-              </li>
-              <li>
-                <a href="./contact-me.html">Contact</a>
-              </li>
-            </ul>
-          </nav>
-          <button
-            class="menu-button"
-            onclick="openMenu()"
-            aria-label="Mobile menu button"
-          >
-            <img alt="Mobile menu icon" src="./assets/icons/menu-light.svg" />
-          </button>
-        </div>
-        <div class="header-about-me-container">
-          <h1>
-            Hello, <span class="font-w-500 italic">I'm</span> <br />
-            Gabriela Tonini
-          </h1>
-          <img class="profile-pic" src="./assets/images/profile-picture.png" />
-          <div class="about-me-description">
-            <p class="mb-1">
-              My work is mainly focused on third-dimension modeling, texturing
-              and rendering. I like exploring the creatures with a touch of dark
-              surrealism for characters and production.
-            </p>
-            <p>
-              Now I'm an interactive media design student in Portugal ⏤
-              currently freelancing and seeking internship opportunities.
-            </p>
-            <img
-              onclick="scrollToInitialSection()"
-              class="header-arrow mt-1"
-              src="./assets/icons/down-arrow.svg"
-              alt="Ícone de uma seta apontando para baixo"
-            />
-          </div>
-        </div>
-      </div>
-    </header>
-
-<div id="mobile-menu" class="container">
-  <div class="mobile-menu-header">
-    <button onclick="closeMenu()" aria-label="Mobile menu closing button">
-      <img alt="Close icon" src="./assets/icons/close.svg" />
-    </button>
-  </div>
-  <nav>
-    <ul>
-      <li>
-        <a href="./work.html">Work</a>
-      </li>
-      <li>
-        <a href="./about.html">About</a>
-      </li>
-      <li>
-        <a href="./contact-me.html">Contact</a>
-      </li>
-    </ul>
-  </nav>
-</div>
-
-    <section id="initial-section" class="mb-2 pt-2">
-      <div class="container">
-        <div class="experience-section">
-          <h2>Education</h2>
-          <div class="experience-section-item">
-            <h3>University of Lisbon</h3>
-            <div class="experience-section-item-tags">
-              <span class="tag"> Night time </span>
-              <span class="tag"> In-class </span>
-            </div>
-            <div class="experience-section-item-details">
-              Sep 2022 - PRESENT | Postgraduate Degree
-            </div>
-            <div class="experience-section-item-description">
-              Digital Experience Design
-            </div>
-          </div>
-
-          <div class="experience-section-item">
-            <h3>Fean</h3>
-            <div class="experience-section-item-tags">
-              <span class="tag"> Night time </span>
-              <span class="tag"> In-class </span>
-            </div>
-            <div class="experience-section-item-details">
-              Mar 2018 - Dec 2021 | Bachelor's degree
-            </div>
-            <div class="experience-section-item-description">
-              Digital Experience Design
-            </div>
-          </div>
-        </div>
-
-        <div class="experience-section">
-          <h2>Work Experience</h2>
-          <div class="experience-section-item">
-            <h3>Emotion Films</h3>
-            <div class="experience-section-item-tags">
-              <span class="tag"> Full time </span>
-              <span class="tag"> Hybrid </span>
-            </div>
-            <div class="experience-section-item-details">
-              Mar 2023 - Present · 2 mos
-            </div>
-            <div class="experience-section-item-description">
-              Graphic Designer
-            </div>
-          </div>
-
-          <div class="experience-section-item">
-            <h3>D/Araújo</h3>
-            <div class="experience-section-item-tags">
-              <span class="tag"> Full time </span>
-              <span class="tag"> Hybrid </span>
-            </div>
-            <div class="experience-section-item-details">
-              Apr 2022 - Jul 2022 · 4 mos
-            </div>
-            <div class="experience-section-item-description">Art Director</div>
-          </div>
-
-          <div class="experience-section-item">
-            <h3>Henry Schein</h3>
-            <div class="experience-section-item-tags">
-              <span class="tag"> Full time </span>
-              <span class="tag"> Remote </span>
-            </div>
-            <div class="experience-section-item-details">
-              Sep 2021 - Mar 2022 · 7 mos
-            </div>
-            <div class="experience-section-item-description">Designer</div>
-          </div>
-
-          <div class="experience-section-item">
-            <h3>Pessoalize</h3>
-            <div class="experience-section-item-tags">
-              <span class="tag"> Internship </span>
-              <span class="tag"> Hybrid </span>
-            </div>
-            <div class="experience-section-item-details">
-              Feb 2021 - Jul 2021 · 6 mos
-            </div>
-            <div class="experience-section-item-description">
-              UX/UI Designer
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-<section>
-  <div class="container">
-    <h2 class="section-title">
-      <img
-        alt="Icon of a eight pointed star"
-        src=".//assets/icons/title-icon.svg"
-      />
-      <span>Contact Me</span>
-    </h2>
-    <div class="section-content">
-      <div class="responsive-grid-50-50">
-        <div>
-          <p class="section-description color-primary">
-            It's time to talk about your project
-          </p>
-        </div>
-        <div>
-          <div class="contact-info mb-1">
-            <span>Email</span>
-            <span>gabrielatonini08@gmail.com</span>
-          </div>
-          <div class="contact-info">
-            <span>Whatsapp</span>
-            <span>+351 933 375 469</span>
-          </div>
-          <div class="divider"></div>
-
-          <ul class="contact-section-links">
+<body>
+  <header class="background-banner">
+    <div class="container">
+      <div class="header-container">
+        <div class="logo"><a href="./index.html">Gab Tonini</a></div>
+        <nav>
+          <ul>
             <li>
-              <a
-                class="default-link"
-                href="https://www.behance.net/Gbtonini"
-                target="_blank"
-              >
-                Behance
-                <img
-                  alt="Arrow icon pointing to upper left corner"
-                  src="./assets/icons/link-arrow.png"
-                />
-              </a>
+              <a href="./work.html">Work</a>
             </li>
             <li>
-              <a
-                class="default-link"
-                href="https://www.instagram.com/gbtonini/"
-                target="_blank"
-              >
-                Instagram
-                <img
-                  alt="Arrow icon pointing to upper left corner"
-                  src="./assets/icons/link-arrow.png"
-                />
-              </a>
+              <a href="./about.html" class="active-page">About</a>
             </li>
             <li>
-              <a
-                class="default-link"
-                href="https://www.linkedin.com/in/gbtonini/"
-                target="_blank"
-              >
-                LinkedIn
-                <img
-                  alt="Arrow icon pointing to upper left corner"
-                  src="./assets/icons/link-arrow.png"
-                />
-              </a>
+              <a href="./contact-me.html">Contact</a>
             </li>
           </ul>
+        </nav>
+        <button class="menu-button" onclick="openMenu()" aria-label="Mobile menu button">
+          <img alt="Mobile menu icon" src="./assets/icons/menu-light.svg" />
+        </button>
+      </div>
+      <div class="header-about-me-container">
+        <h1>
+          Hello, <span class="font-w-500 italic">I'm</span> <br />
+          Gabriela Tonini
+        </h1>
+        <img class="profile-pic" src="./assets/images/profile-picture.png" />
+        <div class="about-me-description">
+          <p class="mb-1">
+            I am currently based in Lisbon, Portugal, originally from Brazil. Over the past five years, I have been
+            actively involved in the field of design. I began my career in design agencies, where I honed my skills in
+            various areas such as Visual Identity, Branding, Social Media, Packaging, Printed Materials, and Digital
+            Ads.
+          </p>
+          <p>
+            In recent times, I have focused on UX/UI design, specifically working on the creation of Web Pages and Apps.
+            This experience has allowed me to delve deeper into wireframing, prototyping, user-centered interfaces, and
+            research tools.
+          </p>
+          <img onclick="scrollToInitialSection()" class="header-arrow mt-1" src="./assets/icons/down-arrow.svg"
+            alt="Ícone de uma seta apontando para baixo" />
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </header>
 
-<footer class="background-banner">
-  <div class="container footer-container">
-    <span> Copyright © 2023 | Gabriela Tonini </span>
-    <span> Made with 🖤 </span>
+  <div id="mobile-menu" class="container">
+    <div class="mobile-menu-header">
+      <button onclick="closeMenu()" aria-label="Mobile menu closing button">
+        <img alt="Close icon" src="./assets/icons/close.svg" />
+      </button>
+    </div>
+    <nav>
+      <ul>
+        <li>
+          <a href="./work.html">Work</a>
+        </li>
+        <li>
+          <a href="./about.html">About</a>
+        </li>
+        <li>
+          <a href="./contact-me.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
   </div>
-</footer>
-  </body>
+
+  <section id="initial-section" class="mb-2 pt-2">
+    <div class="container">
+      <div class="experience-section">
+        <h2>Education</h2>
+        <div class="experience-section-item">
+          <h3>University of Lisbon</h3>
+          <div class="experience-section-item-tags">
+            <span class="tag"> Night time </span>
+            <span class="tag"> In-class </span>
+          </div>
+          <div class="experience-section-item-details">
+            Sep 2022 - PRESENT | Postgraduate Degree
+          </div>
+          <div class="experience-section-item-description">
+            Digital Experience Design
+          </div>
+        </div>
+
+        <div class="experience-section-item">
+          <h3>Fean</h3>
+          <div class="experience-section-item-tags">
+            <span class="tag"> Night time </span>
+            <span class="tag"> In-class </span>
+          </div>
+          <div class="experience-section-item-details">
+            Mar 2018 - Dec 2021 | Bachelor's degree
+          </div>
+          <div class="experience-section-item-description">
+            Digital Experience Design
+          </div>
+        </div>
+      </div>
+
+      <div class="experience-section">
+        <h2>Work Experience</h2>
+        <div class="experience-section-item">
+          <h3>Emotion Films</h3>
+          <div class="experience-section-item-tags">
+            <span class="tag"> Full time </span>
+            <span class="tag"> Hybrid </span>
+          </div>
+          <div class="experience-section-item-details">
+            Mar 2023 - Present · 2 mos
+          </div>
+          <div class="experience-section-item-description">
+            Graphic Designer
+          </div>
+        </div>
+
+        <div class="experience-section-item">
+          <h3>D/Araújo</h3>
+          <div class="experience-section-item-tags">
+            <span class="tag"> Full time </span>
+            <span class="tag"> Hybrid </span>
+          </div>
+          <div class="experience-section-item-details">
+            Apr 2022 - Jul 2022 · 4 mos
+          </div>
+          <div class="experience-section-item-description">Art Director</div>
+        </div>
+
+        <div class="experience-section-item">
+          <h3>Henry Schein</h3>
+          <div class="experience-section-item-tags">
+            <span class="tag"> Full time </span>
+            <span class="tag"> Remote </span>
+          </div>
+          <div class="experience-section-item-details">
+            Sep 2021 - Mar 2022 · 7 mos
+          </div>
+          <div class="experience-section-item-description">Designer</div>
+        </div>
+
+        <div class="experience-section-item">
+          <h3>Pessoalize</h3>
+          <div class="experience-section-item-tags">
+            <span class="tag"> Internship </span>
+            <span class="tag"> Hybrid </span>
+          </div>
+          <div class="experience-section-item-details">
+            Feb 2021 - Jul 2021 · 6 mos
+          </div>
+          <div class="experience-section-item-description">
+            UX/UI Designer
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <h2 class="section-title">
+        <img alt="Icon of a eight pointed star" src=".//assets/icons/title-icon.svg" />
+        <span>Contact Me</span>
+      </h2>
+      <div class="section-content">
+        <div class="responsive-grid-50-50">
+          <div>
+            <p class="section-description color-primary">
+              It's time to talk about your project
+            </p>
+          </div>
+          <div>
+            <div class="contact-info mb-1">
+              <span>Email</span>
+              <span>gabrielatonini08@gmail.com</span>
+            </div>
+            <div class="contact-info">
+              <span>Whatsapp</span>
+              <span>+351 933 375 469</span>
+            </div>
+            <div class="divider"></div>
+
+            <ul class="contact-section-links">
+              <li>
+                <a class="default-link" href="https://www.behance.net/Gbtonini" target="_blank">
+                  Behance
+                  <img alt="Arrow icon pointing to upper left corner" src="./assets/icons/link-arrow.png" />
+                </a>
+              </li>
+              <li>
+                <a class="default-link" href="https://www.instagram.com/gbtonini/" target="_blank">
+                  Instagram
+                  <img alt="Arrow icon pointing to upper left corner" src="./assets/icons/link-arrow.png" />
+                </a>
+              </li>
+              <li>
+                <a class="default-link" href="https://www.linkedin.com/in/gbtonini/" target="_blank">
+                  LinkedIn
+                  <img alt="Arrow icon pointing to upper left corner" src="./assets/icons/link-arrow.png" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="background-banner">
+    <div class="container footer-container">
+      <span> Copyright © 2023 | Gabriela Tonini </span>
+      <span> Made with 🖤 </span>
+    </div>
+  </footer>
+</body>
+
 </html>
